fix thanks text overflow

--- a/css/all.css
+++ b/css/all.css
@@ -156,25 +156,49 @@ input[name=actionName] {
 }
 
 .thanks {
-  background-color: #0dc61d
+  background-color: #0dc61d;
 }
 
 .thanks h1 {
+	margin-top: 20rem;
   font-size: 30rem;
   color: #fff;
-  line-height: 70rem
+}
+
+
+@media screen and (max-width: 1240px) {
+  .thanks h1 {
+	  font-size: 15rem
+	}
 }
 @media screen and (max-width: 768px) {
-    .myfarmbot-side-nav {
-	display: none;
-    }
+  .myfarmbot-side-nav {
+	  display: none;
+  }
 
-    .myfarmbot-content {
-    	width: 100%;
-    	padding: 0 3rem;
-    }
+  .myfarmbot-content {
+  	width: 100%;
+  	padding: 0 3rem;
+  }
 
-    #saveMachineConfig {
-    	width: 100%;
-    }
+  #saveMachineConfig {
+  	width: 100%;
+  }
+
+	.thanks h1 {
+		font-size: 10rem
+	}
 }
+
+@media screen and (max-width: 480px) {
+ .field tbody tr td {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+
+	.thanks h1 {
+	  font-size: 8rem
+	}
+ 
+}
+
